--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -66,7 +66,7 @@ tooltip label {
     border-radius: 14px;
     margin: 2px 2px 2px 8px; 
     background-color: alpha(@color0, 1);
-    color: #F7B980;
+    color: #F9F8F6;
     border: 2px solid transparent;
     background: linear-gradient(alpha(@color0, 0.80), alpha(@color0, 0.80)) padding-box,
                 linear-gradient(45deg, @color7, @color0) border-box;
@@ -90,7 +90,7 @@ tooltip label {
     padding: 2px 10px;
     margin: 2px;
     border-radius: 14px;
-    color: #FCF6D9;
+    color: #F9F8F6;
     border: 2px solid transparent;
     background: linear-gradient(alpha(@color0, 0.80), alpha(@color0, 0.80)) padding-box,
                 linear-gradient(45deg, @color7, @color0) border-box;
@@ -158,7 +158,7 @@ window#waybar.empty #window {
 /* Custom Modules */
 #custom-cava {
     background-color: alpha(@color0, 1);
-    color: #6AECE1;
+    color: #F9F8F6;
     border-radius: 14px;
     padding-right: 6px;
     padding-left: 6px;
@@ -196,7 +196,7 @@ window#waybar.empty #window {
     border-radius: 14px;
     margin: 4px 6px;
     padding: 6px 8px;
-    color: #4B9DA9;
+    color: #F9F8F6;
     border: 2px solid transparent;
     background: linear-gradient(alpha(@color0, 0.80), alpha(@color0, 0.80)) padding-box,
                 linear-gradient(45deg, @color7, @color0) border-box;
