--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,7 +7,9 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "Noto Sans Arabic", "Noto Sans", "Noto Sans CJK JP", "JetBrainsMono Nerd Font", sans-serif;
+    font-family:
+        "Noto Sans Arabic", "Noto Sans", "Noto Sans CJK JP",
+        "JetBrainsMono Nerd Font", sans-serif;
     font-weight: 800;
     font-size: 13px;
     letter-spacing: -0.5px;
@@ -41,7 +43,7 @@ tooltip {
     background-color: @pywal-module-bg;
     color: @color7;
     border: 2px solid @pywal-border;
-    transition: all 0.3s cubic-bezier(.55,-0.04,.3,1.44);
+    transition: all 0.3s cubic-bezier(0.55, -0.04, 0.3, 1.44);
 }
 
 window#waybar.empty #window {
@@ -106,7 +108,8 @@ window#waybar.empty #window {
     }
 }
 
-#custom-cava, #pulseaudio {
+#custom-cava,
+#pulseaudio {
     color: @color5;
 }
 
@@ -119,5 +122,4 @@ window#waybar.empty #window {
     min-height: 24px;
     padding-top: 0px;
     padding-bottom: 0px;
-    transition: none;
 }
