--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -6,23 +6,23 @@
 
 * {
     border: none;
-    border-radius: 0;
+    min-height: 0;
     font-family:
         "Noto Sans Arabic", "Noto Sans", "Noto Sans CJK JP",
         "JetBrainsMono Nerd Font", sans-serif;
     font-weight: 800;
     font-size: 13px;
     letter-spacing: -0.5px;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 window#waybar {
-    background-color: transparent;
+    background: transparent;
 }
 
 tooltip {
-    background: @color0;
+    background-color: @color0;
     color: @color7;
     border: 2px solid @color4;
     border-radius: 8px;
@@ -36,48 +36,56 @@ tooltip {
 #custom-cava,
 #tray,
 #language,
-#pulseaudio {
+#pulseaudio,
+#backlight {
     padding: 2px 10px;
     border-radius: 14px;
     margin: 4px 3px;
     background-color: @pywal-module-bg;
     color: @color7;
     border: 2px solid @pywal-border;
-    transition: all 0.3s cubic-bezier(0.55, -0.04, 0.3, 1.44);
+    transition: all 0.3s ease;
 }
 
 window#waybar.empty #window {
     background-color: transparent;
     border: none;
     margin: 0;
+    padding: 0;
 }
 
 #workspaces button {
     box-shadow: none;
     text-shadow: none;
-    padding: 0px 5px;
+    padding: 3px 4px;
     margin: 0 3px;
     border-radius: 8px;
     background-color: transparent;
     color: @color4;
+    transition: all 0.3s ease-in-out;
 }
 
 #workspaces button.active {
     background-color: @color4;
     color: @color0;
-    min-width: 40px;
+    min-width: 50px;
+    transition: all 0.3s ease-in-out;
 }
 
 #workspaces button:hover {
-    background-color: alpha(@color4, 0.2);
+    background-color: alpha(@color4, 0.12);
     color: @color4;
-    border-radius: 12px;
+    border-radius: 16px;
+    min-width: 50px;
+    transition: all 0.3s ease-in-out;
 }
 
 #workspaces button.urgent {
     background-color: @color1;
     color: @color0;
-    border-radius: 12px;
+    border-radius: 16px;
+    min-width: 50px;
+    transition: all 0.3s ease-in-out;
 }
 
 #custom-swaync {
@@ -108,7 +116,10 @@ window#waybar.empty #window {
     }
 }
 
-#custom-cava,
+#custom-cava {
+    color: @color5;
+}
+
 #pulseaudio {
     color: @color5;
 }
@@ -117,9 +128,12 @@ window#waybar.empty #window {
     color: @color6;
     margin-top: 4px;
     margin-bottom: 4px;
-    padding-left: 12px;
-    padding-right: 12px;
     min-height: 24px;
     padding-top: 0px;
     padding-bottom: 0px;
+    transition: none;
+}
+
+#backlight {
+    color: @color3;
 }
