--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,7 +8,7 @@
     border: none;
     min-height: 0;
     font-family:
-        "Noto Sans Arabic", "Noto Sans", "Noto Sans CJK JP",
+        "SF Pro Text", "Noto Sans Arabic", "Noto Sans", "Noto Sans CJK JP",
         "JetBrainsMono Nerd Font", sans-serif;
     font-weight: 800;
     font-size: 13px;
